2008-06-30  Scott James Remnant  <scott@netsplit.com>

	* init/Makefile.am: Update along with libnih so that we leave the
	D-Bus bindings in the dist tarball, meaning Python is no longer a
	build-dependency.

2008-06-11  Scott James Remnant  <scott@netsplit.com>

	* Makefile.am (SUBDIRS): List dbus before init in case we need to
	generate anything in that directory later on.
	
	* Makefile.am (SUBDIRS): List po last so that update-po is run after
	generating any sources.

2008-06-08  Scott James Remnant  <scott@netsplit.com>

	* init/Makefile.am (EXTRA_DIST): Ship the built sources, don't
	clean them.
	(maintainer-clean-local): Well, not unless maintainer-clean anyway

	* init/job.c, init/job_class.c: Add missing errno.h include

	* dbus/com.ubuntu.Upstart.Job.xml (GetInstance): Add method to get
	an instance name in the same basic manner as start and stop would,
	though this one's synchronous.
	* init/job_class.c (job_class_get_instance): Implementing by copying
	the relevant bit of Stop.
	* init/job_class.h: Add prototype.
	* init/tests/test_job_class.c (test_get_instance): Add tests.
	* TODO: Continue to document the C&P madness.

	* init/conf.c (conf_reload_path): Read file directly into memory,
	not using mmap.

	* compat/sysv/reboot.c, compat/sysv/runlevel.c, compat/sysv/shutdown.c,
	* compat/sysv/telinit.c: Move into the util directory; we're going
	to support limited SysV-a-like commands without full compatibility
	which is what we always did, and I'm not going to worry about adding
	others.
	* compat/sysv/man/reboot.8, compat/sysv/runlevel.8,
	* compat/sysv/man/shutdown.8, compat/sysv/telinit.8: Move as well.
	* compat/sysv/Makefile.am, util/Makefile.am: Merge.
	* configure.ac: Remove the (commented out) compat/sysv and logd
	Remove the --enable-compat option.
	* Makefile.am (SUBDIRS): Remove (commented out) compat/sysv and logd

	* logd/Makefile.am, logd/main.c, logd/man/logd.8, logd/jobs.d/logd.in: